Bug 263099. Fix coordinate translation in event handling when finding the relevant line of nested blocks. r+sr=bzbarsky